<resources>
    <string name="application_name">GoJahit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip_intro">skip</string>
    <string name="next_intro">Next</string>
    <string name="title_intro">Title Intro</string>
    <string name="title_intro_desc">Title Intro Desc</string>
    <string name="feronikanm">Designed by <u>feronikanm</u></string>
    <string name="login_pelanggan_text">Don\'t have an account? <b>Register Now</b></string>
    <string name="login_penjahit_text">Don\'t have an account? <b>Register Now</b></string>
    <string name="reg_pelanggan_text">Already have an account? <b>Login</b></string>
    <string name="reg_penjahit_text">Already have an account? <b>Login</b></string>
    <string name="see_all"><b><u>See All</u></b></string>

    <string name="home">Home</string>
    <string name="profile">Profil</string>
    <string name="transaction">Transaksi</string>
    <string name="kriteria_1">Kualitas Pekerjaan</string>
    <string name="kriteria_2">Lama Waktu Pengerjaan</string>
    <string name="kriteria_3">Layanan Penjahit</string>
    <string name="kriteria_4">Harga Jasa Jahit</string>
    <string name="sangat_buruk">Sangat Buruk</string>
    <string name="sangat_baik">Sangat Baik</string>

    <string name="google_maps_key">AIzaSyALa4dXJi8sGWRnruL7BxmGD4LSVZCUOUQ</string>
    <string name="bahan_jahit">Bahan Jahit</string>
    <string name="harga_bahan">Harga Bahan</string>
    <string name="ongkos_penjahit">Ongkos Penjahit</string>
    <string name="lama_waktu">Lama Waktu</string>
    <string name="keterangan">Keterangan</string>


    <!--    <string name="about">Designed by <a href="https://github.com/feronikanm">feronikanm</a></string>-->
    <!--    <string name="about_us"><font fgcolor="#039BE5">Designed by </font><font fgcolor="#000000"><a href="https://github.com/feronikanm">feronikanm</a></font></string>-->
</resources>